fix: use dropdown component for operators (#3411)
* fix: use dropdown component for operators

* feat: styles

* fix: overflowing variable names (#3414)

* feat: add wrapping

--- a/src/pages/automate/workflows/editor/visualBuilder/editors/ConditionsNodeEditor/ConditionsNodeEditor.less
+++ b/src/pages/automate/workflows/editor/visualBuilder/editors/ConditionsNodeEditor/ConditionsNodeEditor.less
@@ -22,11 +22,7 @@
     }
 
     .input {
-        width: 100%;
-    }
-
-    .numberInput {
-        min-width: 80px;
+        flex: 1;
     }
 
     .fallback {
@@ -93,5 +89,9 @@
 
     .deleteIcon {
         font-size: 18px;
+    }
+
+    .dateConditionNumberInput {
+        max-width: 80px;
     }
 }
